Fix an assert in on document saving that caused freezes on autosaving

The assert caught a real bug in File Layer cloning, and its recovery
branch caused a small freeze. The problem was that I forgot to update
file layer's copy constructor when fixing the lost-files bug.

BUG:456404